Fixed Flex issues on IE11 for About page, Guide page. For the two pages, changed flex:1 to flex:1 0 auto, which prevents container from shrinking to accommodate the header and footer.

--- a/app/styles/components/about-content.styl
+++ b/app/styles/components/about-content.styl
@@ -3,7 +3,7 @@
     background-repeat: no-repeat
     background-size: cover
     background-position: center
-    flex: 1
+    flex: 1 0 auto
 
     > .content
         @extend .container
